# mcp-server-singlestore

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-marker  AUTHENTICATION_REFACTORING.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  coverage.xml  local.Dockerfile  pyproject.toml  requirements.txt  smithery.yaml  tool_result.txt
.github/workflows/: check-format.yml  check-lint.yml  ci.yml  docker-publish.yml  flake8-lint.yml  process-release-markers.yml  publish-pypi.yml  test-release-markers.yml  version-check.yml
changelog/: 0.4.10.md  0.4.11.md  0.4.12.md  0.4.13.md  0.4.14.md  0.4.15.md  0.4.16.md  0.4.17.md  0.4.18.md  0.4.19.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md  0.4.6.md  0.4.7.md  0.4.8.md  0.4.9.md  0.5.0.md
config/: settings.toml
new_src/: main.py
new_src/api/: common.py
new_src/api/resources/: resources.py  types.py
new_src/api/tools/: registery.py  tools.py  types.py
new_src/auth/: callback.py  provider.py
new_src/config/: config.py
scripts/: README.md  check-all.sh  check.sh  create-changelog.sh  dev-workflow.md  mark-release.sh  release.sh  test.sh
src/: __init__.py  __main__.py  auth.py  commands.py  constants.py  init.py  logger.py  main.py  server.py
src/analytics/: __init__.py  manager.py
src/api/: common.py  context.py  types.py
src/api/prompts/: prompts.py  register.py  types.py
src/api/resources/: __init__.py  register.py  resources.py  types.py
src/api/responses/: README.md  __init__.py  decorators.py  types.py
src/api/tools/: README.md  __init__.py  models.py  register.py  registery.py  s2_manager.py  sample_notebook.ipynb  tools.py  types.py
src/assets/: callback.html
src/auth/: __init__.py  auth.py  auth_provider.py  browser_auth.py  callback.py  oauth_routes.py  oauth_schema.sql  provider.py  proxy_provider.py  session_credentials_manager.py  settings.py  success_page.html
src/auth/models/: __init__.py  models.py
src/cli/: __init__.py  init.py  start.py
src/commands/: __init__.py  constants.py  init.py  start.py
src/config/: __init__.py  app_config.py  auth_config.py  auth_settings.py  config.py  instructions.md  org_config.py
src/mcp_server/assets/: sample_notebook.ipynb
src/mcp_server/auth/: auth.py  oauth_routes.py
src/mcp_server/config/: app_config.py
src/my_server/: config.py  server.py
src/my_server/tools/: README.md  __init__.py  config.py  definitions.py
src/scripts/: init.py
src/server/: app_config.py  auth.py  config.py  init.py  server.py
src/server/config/: app_config.py  config.py
src/server/tools/: __init__.py  classes.py  definitions.py  registration.py
src/server/utils/: common.py  middleware.py  registration.py  resources.py  tools.py  types.py
src/storage/: SingleStoreKV.py
src/utils/: __init__.py  async_to_sync.py  common.py  constants.py  elicitation.py  middleware.py  registration.py  resources.py  tools.py  types.py  uuid_validation.py
tests/: models.py  test_cli_commands.py  test_responses.py  test_server.py  test_uuid_validation.py
tests/integration/: conftest.py  test_regions_integration.py
tests/integration/cli/: test_server.py
tests/integration/tools/: conftest.py  test_cloud_functions.py  test_database.py  test_jobs.py  test_notebooks.py  test_organization.py  test_regions.py  test_run_sql_virtual_workspace.py  test_starter_workspaces.py  test_user.py  test_workspaces.py  utils.py
tests/unit/: test_authenticate_helpers.py  test_cloud_functions.py  test_create_pipeline.py  test_notebook_upload.py  test_notebook_utils.py  test_refresh_and_auth_main.py  test_save_and_load_credentials.py  test_stage.py  test_tools_uuid_validation.py
tests/unit/auth/: README.md  conftest.py  test_authenticate_helpers.py  test_authenticate_main.py  test_load_credentials.py  test_oauth_proxy_integration.py  test_runner.py  (+7 more)
(+46 files in other folders)
