[project]
name = "singlestore_mcp_server"
dynamic = ["version"]
description = "SingleStore MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp[cli]>=1.6.0",
 "nbformat>=5.10.4",
 "singlestoredb>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
singlestore-mcp-server = "server:main"
