[project]
name = "singlestore_mcp_server"
dynamic = ["version"]
description = "SingleStore MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "black>=25.1.0",
 "flake8>=7.2.0",
 "mcp[cli]>=1.8.1",
 "nbformat>=5.10.4",
 "pydantic-settings>=2.9.1",
 "singlestoredb>=1.12.0",
 "starlette>=0.46.2",
]

[project.scripts]
singlestore-mcp-server = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flake8]
# line too long
ignore="E501"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.391",
 "pytest>=8.3.4",
 "ruff>=0.8.5",
 "singlestore-mcp-server",
]

[tool.uv.sources]
singlestore-mcp-server = { workspace = true }

